# migraine-tracker

./: docker-compose.yml
backend/: .dockerignore  .env.template  .gitignore  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/authentication/: serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py  0002_create_default_admin.py
backend/core/: settings.py  urls.py
backend/docker/: Dockerfile  entrypoint-worker.sh
backend/migraine/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/migraine/migrations/: 0001_initial.py  0002_split_headache_location.py  0003_seed_preset_symptoms.py  0004_medication_effectiveness_scale_drop_unique.py
frontend/: .dockerignore  .env.template  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/scripts/: update-api.sh
frontend/src/: index.css  main.tsx  vite-env.d.ts
frontend/src/api/: axios.ts
frontend/src/api/django/: djangoAPI.schemas.ts
frontend/src/components/migraines/: EpisodeDetailDialog.tsx  EpisodeFormDialog.tsx  EpisodeMedicationsField.tsx  EpisodeTable.tsx  ManagedMultiSelect.tsx  MedicationFormDialog.tsx  MigraineHeatmap.tsx
frontend/src/components/settings/: NameForm.tsx  (+2 more)
frontend/src/layouts/: ProtectedLayout.tsx  RedirectIfAuthenticatedLayout.tsx  SideBarLayout.tsx
frontend/src/pages/: Home.tsx  Login.tsx  MigraineLog.tsx  Settings.tsx
frontend/src/stores/: UserStore.ts
(+10 files in other folders)
