[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.14",
    "django-celery-beat>=2.9.0",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.9.0",
    "django-health-check>=4.4.1",
    "djangorestframework>=3.17.1",
    "drf-nested-routers>=0.95.0",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "markdown>=3.10.2",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "celery-types>=0.26.0",
    "django-stubs>=6.0.4",
    "django-types>=0.24.0",
    "djangorestframework-types>=0.9.0",
    "types-jsonschema>=4.26.0.20260508",
    "types-pytz>=2026.2.0.20260506",
]
